# MCP

./: .gitignore  README.md  app.py  client.py  main.py  mathser.py  pyproject.toml  requirements.txt  weather.py
